@@ -239,6 +239,7 @@ class ArtworkProcessor(object):
                 mediaitem.get('seasons'), existingkeys), mediatype, existingart, availableart))
             selectedart = info.get_artwork_updates(mediaitem['art'], selectedart)
             if selectedart:
+                cleaner.clean_artwork_beforesave(mediaitem)
                 mediaitem['updated art'] = selectedart.keys()
                 add_art_to_library(mediatype, mediaitem.get('seasons'), mediaitem['dbid'], selectedart)
 
